@@ -169,7 +169,7 @@ There are two image directives: image_ and figure_.
   ----------- ------------- ----------------------------- -----------------
   ..          SVG    PDF    PNG   JPG   GIF   APNG  AVIF  WebM  MP4   OGG
   =========== ====== ====== ===== ===== ===== ===== ===== ===== ===== =====
-  HTML4_      ✓ [#]_        ✓     ✓     ✓     (✓)   (✓)
+  HTML4_ [#]_ ✓             ✓     ✓     ✓     (✓)   (✓)   ✓     ✓     ✓
 
   HTML5_      ✓             ✓     ✓     ✓     ✓     ✓     ✓     ✓     ✓
 
@@ -182,8 +182,9 @@ There are two image directives: image_ and figure_.
          ends with an extension matching one of the listed video formats
          (since Docutils 0.17).
 
-  .. [#] The html4 writer uses an ``<object>`` tag for SVG images
-         for better compatibility with older browsers.
+  .. [#] The html4 writer uses an ``<object>`` tag for SVG images and
+         videos for compatibility with older browsers and for XHTML1.1
+         conformance respectively.
 
   .. [#] When compiling with ``pdflatex``, ``xelatex``, or ``lualatex``.
          The original ``latex`` engine supports only the EPS image format.
