@@ -3,3 +3,5 @@ Additional tests with html4css1
 ===============================
 
 .. include:: data/section_titles.txt
+
+.. include:: data/video.txt
