@@ -77,6 +77,10 @@ Changes since 0.20.1
     (patch #206 by Chris Sewell); simplify regexps; skip replacement
     rules if there is nothing to replace.
 
+* docutils/writers/html4css1/__init__.py
+
+  - Support video inclusion via `<object>` tags.
+
 * docutils/writers/latex2e/__init__.py
 
   - Fix placement of hyperlink target (label) for tables (bug #440).
